[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/GameHUD/GameHUD.gd" type="Script" id=1]
[ext_resource path="res://GUI/GameHUD/VitalBar.png" type="Texture" id=2]
[ext_resource path="res://Misc/PaletteSpriteCore/PaletteSpriteCore.tscn" type="PackedScene" id=3]

[node name="GameHUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PlayerVitalBar" type="Sprite" parent="."]
visible = false
position = Vector2( 20, 16 )
texture = ExtResource( 2 )
centered = false
hframes = 29
vframes = 4
frame = 1

[node name="PaletteSprite" parent="PlayerVitalBar" instance=ExtResource( 3 )]
primary_color_frame_add = 29
secondary_color_frame_add = 58
outline_color_frame_add = 87

[node name="DelayTimer" type="Timer" parent="PlayerVitalBar"]
wait_time = 0.06
one_shot = true

[node name="PlayerWeaponBar" type="Sprite" parent="."]
visible = false
position = Vector2( 12, 16 )
texture = ExtResource( 2 )
centered = false
hframes = 29
vframes = 4
frame = 28

[node name="PaletteSprite" parent="PlayerWeaponBar" instance=ExtResource( 3 )]
primary_color_frame_add = 29
secondary_color_frame_add = 58
outline_color_frame_add = 87

[node name="DelayTimer" type="Timer" parent="PlayerWeaponBar"]
wait_time = 0.06
one_shot = true

[node name="BossVitalBar" type="Sprite" parent="."]
visible = false
position = Vector2( 36, 16 )
texture = ExtResource( 2 )
centered = false
hframes = 29
vframes = 4

[node name="PaletteSprite" parent="BossVitalBar" instance=ExtResource( 3 )]
primary_color_frame_add = 29
secondary_color_frame_add = 58
outline_color_frame_add = 87

[node name="DelayTimer" type="Timer" parent="BossVitalBar"]
wait_time = 0.06
one_shot = true

[connection signal="timeout" from="PlayerVitalBar/DelayTimer" to="." method="_on_PlayerVitalBar_DelayTimer_timeout"]
[connection signal="timeout" from="PlayerWeaponBar/DelayTimer" to="." method="_on_PlayerWeaponBar_DelayTimer_timeout"]
[connection signal="timeout" from="BossVitalBar/DelayTimer" to="." method="_on_BossVitalBar_DelayTimer_timeout"]
